# libpsafe3

./: .clang-format  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: cmake-test.yml
cmds/: CMakeLists.txt  psafe3dump.cpp
data/: database-fields.csv
data/test/: test.psafe3
docs/: header-fields.csv
include/: psafe3.h
lib/: CMakeLists.txt  crypto_gcrypt.cpp  psafe.cpp  psafe.h  psafe3api.cpp  pws3.cpp  safe.h  util.cpp  util.h
src/: CMakeLists.txt  common.h  crypto.c  crypto.cpp  crypto.h  error.h  handle.h  mapped.cpp  mapped.h  mapped_file.cpp  mapped_file.h  mapped_memory.cpp  mapped_memory.h  psafe.c  psafe.cpp  psafe.h  psafe3.c  psafe3.cpp  psafe3.h  psafe3api.c  psafe3chkpass.c  psafe3dump.c  psafe3dump.cpp  psafe3pass.c  psafe3pass.cpp  psafedump.c  pws3.cpp  pws3.h  safe.cpp  safe.h  safeio.cpp  safeio.h  secure_bytes.cpp  secure_bytes.h  test_util.c  util.cpp  util.h  utility.h
src/libpsafe3/: CMakeLists.txt  crypto_gcrypt.c  crypto_gcrypt.h  internal.h  ioport.c  ioport.h  lib.internal.h  libpsafe3.c  libpsafe3.h  util.c  util.h
src/psafe/: CMakeLists.txt  psafe.c  psafe.h  pws3.c  pws3.h
src/psafe3/: CMakeLists.txt  common.h  crypto_gcrypt.c  crypto_gcrypt.h  libraryapi.c  psafe.c  psafe.h  pws3.c  pws3.h  safe.c  safe.h  safeio.c  safeio.h  util.c  util.h
src/test/: CMakeLists.txt  test_mapped_file.cpp  test_util.c  test_util.cpp  test_utility.cpp
src/util/: CMakeLists.txt  ioport.c  ioport.h  util.c  util.h
test/: CMakeLists.txt  test_util.cpp
tools/: rrsrc.py  strbytes.py
